PRL-4212 - Manage orders test coverage & sonar code smell fixes. (#1774)
* PRL-4212 - manage orders test cases coverage & sonar code smell fixes

* Added suppression for CVE-2023-42795, CVE-2023-45648